2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* module/op_nmi.c: also allow user to see 0/ 1/ contents
 
2002-04-30  William Cohen  <wcohen@nc.rr.com>

	* module/oprofile.c: Allow non-root examination of
	  /proc/sys/dev/oprofile and initiation of dump. 

	* dae/op_dump: modify message for above

2002-04-30  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* libdb/Makefile: remove from CVS
 
	* dae/oprofiled.c:
	* module/oprofile.c: 
	* module/oprofile.h: use better hash function.
	  Fold unused/full entry case into eviction case
	  for faster common path
 
2002-04-27  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: fix little blooper that shows up
	  when CONFIG_M386 is chosen
 
2002-04-23  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: yet another bug fix for --sort=
	  and counter nr command line specification ...

2002-04-22  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: opd_alarm() flush properly samples files

	* oprof_report/oprof_report.cpp: use the right filename
	  when selecting a shared lib profiled with --separate-samples

2002-04-22  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/op_merge.c: implement merging of the new file format files.

2002-04-21  Philippe Elie  <phil.el@wanadoo.fr>

	* oprof_report/Makefile.in:
	* oprof_report/oprof_report.cpp: use db

2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: OPD_KERNEL_OFFSET thing
	* pp/oprofpp_util.cpp:

2002-04-20  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.c: minor warning suppression

	* pp/Makefile.in:
	* pp/oprofpp.cpp:
	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/oprofpp.h: handle the new db file format, this stuff is
	  not yet extensively tested

	* pp/op_merge.c: not already updated, exit at run time
	  with an error message

2002-04-19  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_proc.h:
	* dae/oprofiled.h: enable db samples file format
